Fix spacing around maths blocks

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -59,6 +59,14 @@
 		font-variant: small-caps;
 	}
 
+	p {
+		@apply mb-0;
+
+		+ p {
+			@apply mt-8;
+		}
+	}
+
 	strong,
 	dfn,
 	em {
